--- a/style.css
+++ b/style.css
@@ -80,7 +80,10 @@ body{
 }
 @media screen and (max-width:768px) {
      .wrapper{
-          width: 85%;
+          width: 95%;
+     }
+     .button{
+          width:95%;
      }
      .button button{
           margin: 0px 5px;
